--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
 <meta charset="UTF-8">
 <title>The Psychic Game!</title>
 
-<link =rel"reset" href="reset.css">
-<link =rel"stylesheet" href="style.css">
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+<link =rel"stylesheet" href="assets/css/style.css">
+<link =rel"reset" href="assets/css/reset.css">
+
 
 </head>
 <body>
@@ -18,14 +15,18 @@
 <br>
 <div id="game">
 	<p>Guess what letter I am thinking.</p>
-	<p>Wins: <span id="wins">0</span></p>
+	<p>Wins: <span id="numWins">0</span></p>
 	<p>Losses: <span id="losses">0</span></p>
 	<p>Guesses: <span id="guesses">10</span></p>
-	<p>Guesses so far: <span id="lettersGuessed">0</span></p>
+	<p>Guesses so far: <span id="lettersGuessed"></span></p>
 </div>
 
 
 
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 <script src="assets/javascript/game.js"></script>
 </body>
 </html>
