--- a/index.html
+++ b/index.html
@@ -15,18 +15,15 @@
 <br>
 <div id="game">
 	<p>Guess what letter I am thinking.</p>
-	<p>Wins: <span id="numWins">0</span></p>
+	<p>Wins: <span id="wins">0</span></p>
 	<p>Losses: <span id="losses">0</span></p>
 	<p>Guesses: <span id="guesses">10</span></p>
-	<p>Guesses so far: <span id="lettersGuessed"></span></p>
+	<p>Guesses so far: <span id="letters"></span></p>
 </div>
 
 
 
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+
 <script src="assets/javascript/game.js"></script>
 </body>
 </html>
