made it prettier

--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
 <meta charset="UTF-8">
 <title>The Psychic Game!</title>
 
-<link =rel"stylesheet" href="assets/css/style.css">
-<link =rel"reset" href="assets/css/reset.css">
+<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Hind+Siliguri" rel="stylesheet">
+
+<link rel="stylesheet" href="assets/css/style.css">
+<link rel="reset" href="assets/css/reset.css">
 
 
 </head>
 <body>
+<div id="header">
 <h1>The Psychic Game</h1>
-<br>
-<div id="game">
-	<p>Guess what letter I am thinking.</p>
-	<p>Wins: <span id="wins">0</span></p>
-	<p>Losses: <span id="losses">0</span></p>
-	<p>Guesses: <span id="guesses">10</span></p>
-	<p>Guesses so far: <span id="letters"></span></p>
 </div>
-
+<br>
+<div id="gameDiv">
+	<div id="game">
+		<h2>Guess what letter I am thinking.</h2>
+		<p>Wins: <span id="wins">0</span></p>
+		<p>Losses: <span id="losses">0</span></p>
+		<p>Guesses: <span id="guesses">10</span></p>
+		<p>Guesses so far: <span id="letters"></span></p>
+	</div>
+</div>
 
 
 
